changed version wrapper class name